tests/test_out.txt
============================= test session starts ==============================
platform darwin -- Python 3.12.12, pytest-9.0.2, pluggy-1.6.0 -- ./.venv/bin/python
cachedir: .pytest_cache
rootdir: .
configfile: pyproject.toml
plugins: anyio-4.12.1, asyncio-1.3.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=function, asyncio_default_test_loop_scope=function
collecting ... collected 2 items

tests/test_tenant_isolation.py::test_tenant_isolation_store_and_recall FAILED [ 50%]
tests/test_tenant_isolation.py::test_tenant_isolation_update_and_deprecate FAILED [100%]

=================================== FAILURES ===================================
____________________ test_tenant_isolation_store_and_recall ____________________

engine = <cortex.engine.CortexEngine object at 0x10825fa40>

    @pytest.mark.asyncio
    async def test_tenant_isolation_store_and_recall(engine):
        """Verify that facts stored under one tenant cannot be recalled by another."""
    
        # Store fact for Alice
        token_alice = tenant_id_var.set("tenant-alice")
        fact_id_alice = await engine.store(
            content="Alice's secret strategy",
            fact_type="decision",
            project="alpha",
            source="api",
        )
        tenant_id_var.reset(token_alice)
    
        # Store fact for Bob
        token_bob = tenant_id_var.set("tenant-bob")
        fact_id_bob = await engine.store(
            content="Bob's secret strategy",
            fact_type="decision",
            project="alpha",
            source="api",
        )
        tenant_id_var.reset(token_bob)
    
        # Alice queries -> should only see her fact
        token_alice = tenant_id_var.set("tenant-alice")
        facts_alice = await engine.recall(project="alpha")
>       assert len(facts_alice) == 1
E       assert 0 == 1
E        +  where 0 = len([])

tests/test_tenant_isolation.py:57: AssertionError
__________________ test_tenant_isolation_update_and_deprecate __________________

engine = <cortex.engine.CortexEngine object at 0x10f00adb0>

    @pytest.mark.asyncio
    async def test_tenant_isolation_update_and_deprecate(engine):
        """Verify that updating or deprecating cross-tenant facts fails."""
    
        # Alice stores a fact
        token_alice = tenant_id_var.set("tenant-alice")
        fact_id_alice = await engine.store(
            content="Alice's initial draft",
            fact_type="knowledge",
            project="beta",
            source="api"
        )
        tenant_id_var.reset(token_alice)
    
        # Bob tries to update Alice's fact
        token_bob = tenant_id_var.set("tenant-bob")
        try:
            updated_id = await engine.update(
                fact_id=fact_id_alice,
                new_content="Bob hacked this",
                project="beta"
            )
            assert not updated_id, "Bob should not be able to update Alice's fact"
        except Exception:
            pass # Depending on implementation it might raise or return None
    
        # Verify Alice's fact is unchanged
        tenant_id_var.reset(token_bob)
    
        token_alice = tenant_id_var.set("tenant-alice")
        alice_fact = await engine.get_fact(fact_id_alice)
>       assert alice_fact["content"] == "Alice's initial draft"
               ^^^^^^^^^^^^^^^^^^^^^
E       TypeError: 'NoneType' object is not subscriptable

tests/test_tenant_isolation.py:101: TypeError
=============================== warnings summary ===============================
.venv/lib/python3.12/site-packages/_pytest/config/__init__.py:1428
  ./.venv/lib/python3.12/site-packages/_pytest/config/__init__.py:1428: PytestConfigWarning: Unknown config option: timeout
  
    self._warn_or_fail_if_strict(f"Unknown config option: {key}\n")

tests/test_tenant_isolation.py::test_tenant_isolation_store_and_recall
tests/test_tenant_isolation.py::test_tenant_isolation_update_and_deprecate
  ./.venv/lib/python3.12/site-packages/aiosqlite/core.py:63: RuntimeWarning: coroutine '_migration_022_cognitive_layer' was never awaited
    result = function()
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
FAILED tests/test_tenant_isolation.py::test_tenant_isolation_store_and_recall
FAILED tests/test_tenant_isolation.py::test_tenant_isolation_update_and_deprecate
================== 2 failed, 3 warnings in 120.39s (0:02:00) ===================
